[package]
name = "sb-navigation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.24.1"
rust_decimal = { version = "1.29.1", features = ["maths"] }
sb-constants = { path = "../sb-constants" }
